OO-4952: protect arrays